--- a/explicacion_algoritmos.html
+++ b/explicacion_algoritmos.html
@@ -167,15 +167,15 @@
         /* Tarjetas de algoritmos */
         .algorithms-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 1.5rem;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 2rem;
             margin-top: 1.5rem;
         }
 
         .algorithm-card {
             background: linear-gradient(145deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
             border-radius: 20px;
-            padding: 1.8rem;
+            padding: 2rem;
             border: 2px solid transparent;
             transition: all 0.4s ease;
             position: relative;
@@ -566,6 +566,101 @@
             color: #23d5ab;
             font-weight: bold;
         }
+
+        /* Estilos para panel de código expandible */
+        .code-toggle {
+            cursor: pointer;
+            user-select: none;
+            transition: all 0.3s ease;
+        }
+
+        .code-toggle:hover {
+            text-shadow: 0 0 10px var(--card-color);
+        }
+
+        .code-toggle::after {
+            content: ' 👁️ Ver código';
+            font-size: 0.7rem;
+            opacity: 0.7;
+            margin-left: 0.5rem;
+        }
+
+        .code-panel {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.5s ease, padding 0.3s ease, margin 0.3s ease;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 12px;
+            margin-top: 0;
+        }
+
+        .code-panel.active {
+            max-height: 1000px;
+            padding: 1.5rem;
+            margin-top: 1rem;
+            border: 1px solid var(--card-color);
+        }
+
+        .code-panel pre {
+            margin: 0;
+            background: transparent;
+            border-left: none;
+            padding: 0;
+            font-size: 0.85rem;
+            line-height: 1.7;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
+
+        .code-panel .code-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 0.8rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .code-panel .code-header span {
+            color: var(--card-color);
+            font-weight: 600;
+            font-size: 0.85rem;
+        }
+
+        .code-panel .close-btn {
+            cursor: pointer;
+            color: #ff6b6b;
+            font-size: 0.8rem;
+            padding: 0.2rem 0.5rem;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .code-panel .close-btn:hover {
+            background: rgba(255, 107, 107, 0.2);
+        }
+
+        /* Syntax highlighting */
+        .code-keyword {
+            color: #ff79c6;
+        }
+
+        .code-function {
+            color: #50fa7b;
+        }
+
+        .code-string {
+            color: #f1fa8c;
+        }
+
+        .code-comment {
+            color: #6272a4;
+            font-style: italic;
+        }
+
+        .code-number {
+            color: #bd93f9;
+        }
     </style>
 </head>
 
@@ -672,46 +767,211 @@ def get_cost(self, state):
 
                 <!-- DFS -->
                 <div class="algorithm-card dfs">
-                    <h3><span class="icon">📚</span> DFS</h3>
+                    <h3 class="code-toggle" onclick="toggleCode('dfs-code')"><span class="icon">📚</span> DFS</h3>
                     <span class="badge">NO INFORMADO</span>
                     <p><strong>Búsqueda en Profundidad</strong></p>
                     <p>Explora exhaustivamente una rama antes de retroceder. Usa una <strong>pila (LIFO)</strong>.</p>
                     <pre>frontier = [(start, [])]
 state, path = frontier<span style="color: #ff6b6b;">.pop()</span>  # LIFO</pre>
                     <p style="color: #ff6b6b; font-weight: 600;">⚠️ No garantiza optimalidad</p>
+
+                    <!-- Panel de código expandible -->
+                    <div id="dfs-code" class="code-panel">
+                        <div class="code-header">
+                            <span>📄 src/search.py - depth_first_search()</span>
+                            <span class="close-btn" onclick="toggleCode('dfs-code')">✖ Cerrar</span>
+                        </div>
+                        <pre><span class="code-keyword">def</span> <span class="code-function">depth_first_search</span>(problem):
+    <span class="code-string">"""</span>
+    <span class="code-string">Algoritmo DFS: Explora primero los nodos más profundos.</span>
+    <span class="code-string">Retorna una lista de estados (ruta).</span>
+    <span class="code-string">"""</span>
+    <span class="code-comment"># Usamos una pila (LIFO) para DFS</span>
+    frontier = [(problem.get_start_state(), [])]
+    visited = <span class="code-function">set</span>()
+
+    <span class="code-keyword">while</span> frontier:
+        state, path = frontier.<span class="code-function">pop</span>()
+
+        <span class="code-keyword">if</span> problem.is_goal_state(state):
+            <span class="code-keyword">return</span> path + [state]
+
+        <span class="code-keyword">if</span> state <span class="code-keyword">not in</span> visited:
+            visited.<span class="code-function">add</span>(state)
+            <span class="code-keyword">for</span> next_state, action, cost <span class="code-keyword">in</span> problem.get_successors(state):
+                <span class="code-keyword">if</span> next_state <span class="code-keyword">not in</span> visited:
+                    <span class="code-comment"># Guardamos el camino acumulado</span>
+                    new_path = path + [state]
+                    frontier.<span class="code-function">append</span>((next_state, new_path))
+    
+    <span class="code-keyword">return</span> []  <span class="code-comment"># No se encontró ruta</span></pre>
+                    </div>
                 </div>
 
                 <!-- BFS -->
                 <div class="algorithm-card bfs">
-                    <h3><span class="icon">🌊</span> BFS</h3>
+                    <h3 class="code-toggle" onclick="toggleCode('bfs-code')"><span class="icon">🌊</span> BFS</h3>
                     <span class="badge">NO INFORMADO</span>
                     <p><strong>Búsqueda en Anchura</strong></p>
                     <p>Explora por niveles. Usa una <strong>cola (FIFO)</strong> con <code>deque</code>.</p>
                     <pre>frontier = deque([(start, [])])
 state, path = frontier<span style="color: #4ecdc4;">.popleft()</span>  # FIFO</pre>
                     <p style="color: #4ecdc4; font-weight: 600;">✓ Menor número de pasos</p>
+
+                    <!-- Panel de código expandible -->
+                    <div id="bfs-code" class="code-panel">
+                        <div class="code-header">
+                            <span>📄 src/search.py - breadth_first_search()</span>
+                            <span class="close-btn" onclick="toggleCode('bfs-code')">✖ Cerrar</span>
+                        </div>
+                        <pre><span class="code-keyword">from</span> collections <span class="code-keyword">import</span> deque
+
+<span class="code-keyword">def</span> <span class="code-function">breadth_first_search</span>(problem):
+    <span class="code-string">"""</span>
+    <span class="code-string">Algoritmo BFS (Breadth-First Search):</span>
+    <span class="code-string">Explora primero todos los nodos del mismo nivel.</span>
+    <span class="code-string">Garantiza encontrar el camino más corto en número de pasos.</span>
+    <span class="code-string">"""</span>
+    <span class="code-comment"># Usamos una cola (FIFO) para BFS</span>
+    frontier = <span class="code-function">deque</span>([(problem.get_start_state(), [])])
+    visited = <span class="code-function">set</span>()
+
+    <span class="code-keyword">while</span> frontier:
+        <span class="code-comment"># Extraemos el primer estado agregado (FIFO)</span>
+        state, path = frontier.<span class="code-function">popleft</span>()
+
+        <span class="code-comment"># Verificamos si se alcanzó la meta</span>
+        <span class="code-keyword">if</span> problem.is_goal_state(state):
+            <span class="code-keyword">return</span> path + [state]
+
+        <span class="code-comment"># Expandimos el estado si no ha sido visitado</span>
+        <span class="code-keyword">if</span> state <span class="code-keyword">not in</span> visited:
+            visited.<span class="code-function">add</span>(state)
+
+            <span class="code-keyword">for</span> next_state, action, cost <span class="code-keyword">in</span> problem.get_successors(state):
+                <span class="code-keyword">if</span> next_state <span class="code-keyword">not in</span> visited:
+                    <span class="code-comment"># Guardamos el camino acumulado</span>
+                    new_path = path + [state]
+                    frontier.<span class="code-function">append</span>((next_state, new_path))
+
+    <span class="code-comment"># No se encontró una ruta</span>
+    <span class="code-keyword">return</span> []</pre>
+                    </div>
                 </div>
 
                 <!-- UCS -->
                 <div class="algorithm-card ucs">
-                    <h3><span class="icon">💰</span> UCS</h3>
+                    <h3 class="code-toggle" onclick="toggleCode('ucs-code')"><span class="icon">💰</span> UCS</h3>
                     <span class="badge">NO INFORMADO</span>
                     <p><strong>Búsqueda de Costo Uniforme</strong></p>
                     <p>Expande el nodo con menor <strong>costo acumulado g(n)</strong>. Usa <code>heapq</code>.</p>
                     <pre>heapq.heappush(frontier,
     (<span style="color: #ffe66d;">cost</span>, state, path))</pre>
                     <p style="color: #ffe66d; font-weight: 600;">✓ Óptimo considerando costos</p>
+
+                    <!-- Panel de código expandible -->
+                    <div id="ucs-code" class="code-panel">
+                        <div class="code-header">
+                            <span>📄 src/search.py - uniform_cost_search()</span>
+                            <span class="close-btn" onclick="toggleCode('ucs-code')">✖ Cerrar</span>
+                        </div>
+                        <pre><span class="code-keyword">import</span> heapq
+
+<span class="code-keyword">def</span> <span class="code-function">uniform_cost_search</span>(problem):
+    <span class="code-string">"""</span>
+    <span class="code-string">Algoritmo UCS (Uniform Cost Search):</span>
+    <span class="code-string">Expande siempre el nodo con el menor costo acumulado.</span>
+    <span class="code-string">Considera el costo de los terrenos (plano = 1, empinado = 2).</span>
+    <span class="code-string">"""</span>
+    <span class="code-comment"># Cola de prioridad: (costo acumulado, estado, camino)</span>
+    frontier = []
+    heapq.<span class="code-function">heappush</span>(frontier, (<span class="code-number">0</span>, problem.get_start_state(), []))
+
+    <span class="code-comment"># Diccionario para guardar el menor costo encontrado por estado</span>
+    visited = {}
+
+    <span class="code-keyword">while</span> frontier:
+        cost_so_far, state, path = heapq.<span class="code-function">heappop</span>(frontier)
+
+        <span class="code-comment"># Verificamos si se alcanzó la meta</span>
+        <span class="code-keyword">if</span> problem.is_goal_state(state):
+            <span class="code-keyword">return</span> path + [state]
+
+        <span class="code-comment"># Expandimos si no se ha visitado o se encontró un costo menor</span>
+        <span class="code-keyword">if</span> state <span class="code-keyword">not in</span> visited <span class="code-keyword">or</span> cost_so_far < visited[state]:
+            visited[state] = cost_so_far
+
+            <span class="code-keyword">for</span> next_state, action, cost <span class="code-keyword">in</span> problem.get_successors(state):
+                new_cost = cost_so_far + cost
+                new_path = path + [state]
+                heapq.<span class="code-function">heappush</span>(frontier, (new_cost, next_state, new_path))
+
+    <span class="code-comment"># No se encontró una ruta</span>
+    <span class="code-keyword">return</span> []</pre>
+                    </div>
                 </div>
 
                 <!-- A* -->
                 <div class="algorithm-card astar">
-                    <h3><span class="icon">⭐</span> A*</h3>
+                    <h3 class="code-toggle" onclick="toggleCode('astar-code')"><span class="icon">⭐</span> A*</h3>
                     <span class="badge">INFORMADO</span>
                     <p><strong>Búsqueda A Estrella</strong></p>
                     <p>Combina costo real + heurística: <strong>f(n) = g(n) + h(n)</strong></p>
                     <pre>priority = cost + <span style="color: #a855f7;">manhattan</span>(state, goal)
 heapq.heappush(frontier, (priority, ...))</pre>
                     <p style="color: #a855f7; font-weight: 600;">✓ Óptimo y eficiente</p>
+
+                    <!-- Panel de código expandible -->
+                    <div id="astar-code" class="code-panel">
+                        <div class="code-header">
+                            <span>📄 src/search.py - a_star_search()</span>
+                            <span class="close-btn" onclick="toggleCode('astar-code')">✖ Cerrar</span>
+                        </div>
+                        <pre><span class="code-keyword">import</span> heapq
+
+<span class="code-keyword">def</span> <span class="code-function">manhattan</span>(a, b):
+    <span class="code-string">"""Heurística Manhattan: Estima la distancia entre dos puntos."""</span>
+    <span class="code-keyword">return</span> <span class="code-function">abs</span>(a[<span class="code-number">0</span>] - b[<span class="code-number">0</span>]) + <span class="code-function">abs</span>(a[<span class="code-number">1</span>] - b[<span class="code-number">1</span>])
+
+<span class="code-keyword">def</span> <span class="code-function">a_star_search</span>(problem):
+    <span class="code-string">"""</span>
+    <span class="code-string">Algoritmo A*:</span>
+    <span class="code-string">Combina UCS con una heurística (distancia Manhattan)</span>
+    <span class="code-string">para guiar la búsqueda de forma más eficiente.</span>
+    <span class="code-string">"""</span>
+    start = problem.get_start_state()
+
+    <span class="code-comment"># Cola de prioridad: (prioridad, estado, camino, costo acumulado)</span>
+    frontier = []
+    heapq.<span class="code-function">heappush</span>(frontier, (<span class="code-number">0</span>, start, [], <span class="code-number">0</span>))
+
+    visited = {}
+
+    <span class="code-keyword">while</span> frontier:
+        priority, state, path, cost_so_far = heapq.<span class="code-function">heappop</span>(frontier)
+
+        <span class="code-comment"># Verificamos si se alcanzó la meta</span>
+        <span class="code-keyword">if</span> problem.is_goal_state(state):
+            <span class="code-keyword">return</span> path + [state]
+
+        <span class="code-comment"># Expandimos el estado si es más barato que antes</span>
+        <span class="code-keyword">if</span> state <span class="code-keyword">not in</span> visited <span class="code-keyword">or</span> cost_so_far < visited[state]:
+            visited[state] = cost_so_far
+
+            <span class="code-keyword">for</span> next_state, action, cost <span class="code-keyword">in</span> problem.get_successors(state):
+                new_cost = cost_so_far + cost
+                heuristic = <span class="code-function">manhattan</span>(next_state, problem.labyrinth.goal_pos)
+                new_priority = new_cost + heuristic
+                new_path = path + [state]
+
+                heapq.<span class="code-function">heappush</span>(
+                    frontier,
+                    (new_priority, next_state, new_path, new_cost)
+                )
+
+    <span class="code-comment"># No se encontró una ruta</span>
+    <span class="code-keyword">return</span> []</pre>
+                    </div>
                 </div>
             </div>
 
@@ -895,6 +1155,20 @@ def manhattan(a, b):
         <p>Inteligencia Artificial - Proyecto de Algoritmos de Búsqueda</p>
         <p style="margin-top: 1rem; opacity: 0.5;">© 2026</p>
     </footer>
+
+    <script>
+        function toggleCode(panelId) {
+            const panel = document.getElementById(panelId);
+            panel.classList.toggle('active');
+
+            // Cerrar otros paneles abiertos (opcional)
+            document.querySelectorAll('.code-panel').forEach(p => {
+                if (p.id !== panelId && p.classList.contains('active')) {
+                    p.classList.remove('active');
+                }
+            });
+        }
+    </script>
 
 </body>
 
